[package]
name = "tonic_benchmarking"
version = "0.1.0"
authors = ["Alina Gorgovan <alina.gorgovan@stud.acs.upb.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
bencher = "0.1.5"
futures = "0.3.4"
rand = "0.7.3"
tower = "0.3.1"


[build-dependencies]
tonic-build = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "tcp_server"
path = "src/tcp_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "bench"
path = "src/bench.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "unix_server"
path = "src/unix_server.rs"